// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`createInitialCommit commits a message and a branch from the special template values 1`] = `
[
  [
    "git",
    [
      "add",
      ".",
    ],
    "repoPathMock",
  ],
  [
    "git",
    [
      "commit",
      "-minitialCommitMessageMock",
      "--quiet",
    ],
    "repoPathMock",
  ],
  [
    "git",
    [
      "branch",
      "-m",
      "defaultBranchNameMock",
    ],
    "repoPathMock",
  ],
]
`;

exports[`createInitialCommit commits a message on the main branch 1`] = `
[
  [
    "git",
    [
      "add",
      ".",
    ],
    "repoPathMock",
  ],
  [
    "git",
    [
      "commit",
      "-mfeat(generation): initial commit",
      "--quiet",
    ],
    "repoPathMock",
  ],
  [
    "git",
    [
      "branch",
      "-m",
      "main",
    ],
    "repoPathMock",
  ],
]
`;

exports[`createInitialCommit includes initialCommitOptions 1`] = `
[
  [
    "git",
    [
      "add",
      ".",
    ],
    "repoPathMock",
  ],
  [
    "git",
    [
      "commit",
      "-mfeat(generation): initial commit",
      "--quiet",
      "--test-option",
    ],
    "repoPathMock",
  ],
  [
    "git",
    [
      "branch",
      "-m",
      "defaultBranchNameMock",
    ],
    "repoPathMock",
  ],
]
`;
